--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                             </div>
                             <div class="de-flex-col">
                                 <div class="menu_side_area">          
-                                    <a href="reservation.html" class="btn-main btn-line">Reservation</a>
+                                    <a href="tel:+25472343540" class="btn-main btn-line">Call to Reserve</a>
                                     <span id="menu-btn"></span>
                                 </div>
                             </div>
@@ -151,7 +151,7 @@
                     <div class="row g-4">
                         <div class="col-lg-12 text-center"> 
                             <div class="sw-text-wrapper">
-                                <h1 class="slider-title fs-120 mb-2">Tropical Escape</h1>
+                                <h1 class="slider-title fs-120 mb-2">Kivulini Beach Villas</h1>
                                 <p class="slider-teaser mb-0">Discover the perfect blend of luxury, comfort, and convenience at Kivulini.</p>
                             </div>
 
@@ -194,7 +194,7 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-3 text-lg-end text-center">
-                                        <a class="btn-main" href="rooms.html">Check Availability</a>
+                                        <a class="btn-main" href="reservation.html">Make a reservation</a>
                                     </div>
                                 </div>
                             </div>
@@ -216,13 +216,13 @@
 
                                 <div class="col-md-6">
                                     <div class="relative">
-                                        <img src="images-beach-resort/misc/4.webp" class="w-100 rounded02 wow fadeInUp" alt="" data-wow-delay=".2s">
+                                        <img src="images-beach-resort/misc/4.png" class="w-100 rounded02 wow fadeInUp" alt="" data-wow-delay=".2s">
                                     </div>
                                 </div>
 
                                 <div class="col-md-6">
                                     <div class="relative">
-                                        <img src="images-beach-resort/misc/3.webp" class="w-100 rounded02 wow fadeInUp" alt="" data-wow-delay=".4s">
+                                        <img src="images-beach-resort/misc/5.png" class="w-100 rounded02 wow fadeInUp" alt="" data-wow-delay=".4s">
                                     </div>
                                 </div>
                             </div>
@@ -250,24 +250,23 @@
                 <div class="container">
                 <div class="row g-4">
                         <div class="col-lg-4 wow fadeInRight" data-wow-delay=".0s">
-                            <h4>Oceanfront Villas</h4>
-                            <p>Sed duis ut exercitation consequat anim in duis sed non ullamco qui tempor sint dolor pariatur qui in et incididunt laboris dolor.</p>
-
-                            <img src="images-beach-resort/misc/1.webp" class="w-100" alt="">
+                            <h4>Beautiful Villas by the coast</h4>
+                            <p>Nestled along the pristine shores of Diani Beach, Kivulini Beach Villas offers an enchanting escape in an elegantly designed Arab-style home. Spacious villas, adorned with traditional Lamu furniture and vibrant coastal fabrics, provides breathtaking views of the sea and lush coconut groves, ensuring a tranquil and luxurious stay.</p>
+                            <img src="images-beach-resort/misc/3.png" class="w-100" alt="">
                         </div>
 
                         <div class="col-lg-4 wow fadeInRight" data-wow-delay=".2s">
-                            <h4>Private Pools</h4>
-                            <p>Sed duis ut exercitation consequat anim in duis sed non ullamco qui tempor sint dolor pariatur qui in et incididunt laboris dolor.</p>
+                            <h4>Calming Pools</h4>
+                            <p>Unwind in the refreshing pool, surrounded by swaying palm trees and a serene tropical ambiance. Whether taking a relaxing dip or soaking up the sun on the poolside loungers, the peaceful setting of Kivulini Beach Villas ensures ultimate relaxation, making it a perfect retreat for couples, families, and friends.</p>
 
-                            <img src="images-beach-resort/misc/5.webp" class="w-100" alt="">
+                            <img src="images-beach-resort/misc/2.png" class="w-100" alt="">
                         </div>
 
                         <div class="col-lg-4 wow fadeInRight" data-wow-delay=".6s">
                             <h4>Private Beach Access</h4>
-                            <p>Sed duis ut exercitation consequat anim in duis sed non ullamco qui tempor sint dolor pariatur qui in et incididunt laboris dolor.</p>
+                            <p>Step directly onto the soft, white sands of Diani Beach from your villa. Kivulini Beach villas offers exclusive access to a secluded beach stretch, perfect for sunbathing, evening strolls, or simply unwinding with the soothing sound of ocean waves.</p>
 
-                            <img src="images-beach-resort/misc/2.webp" class="w-100" alt="">
+                            <img src="images-beach-resort/misc/1.png" class="w-100" alt="">
                         </div>
 
                         
@@ -433,9 +432,10 @@
                             </div>
                             <div>
                                 <h3 class="fs-20">Contact Us</h3>
-                                T. 0722343435<br>
-                                M. contact@Kivulini.com
+                                T. <a href="tel:+25472343540">+25472343540</a><br>
+                                M. <a href="mailto:contact@Kivulini.com">contact@Kivulini.com</a>
                             </div>
+                            
                         </div>
                     </div>                    
                 </div>
