--- a/contact.html
+++ b/contact.html
@@ -145,7 +145,7 @@
         <div class="no-bottom no-top" id="content">
             <div id="top"></div>
             <section id="subheader" class="relative jarallax text-light">
-                <img src="images/background/3.webp" class="jarallax-img" alt="">
+                <img src="images/room-landscape/reservation banner.jpg" class="jarallax-img" alt="">
                 <div class="container relative z-index-1000">
                     <div class="row justify-content-center">
                         <div class="col-lg-6 text-center">
