--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
 </head>
 
 <body>
+    <script async src='https://d2mpatx37cqexb.cloudfront.net/delightchat-whatsapp-widget/embeds/embed.min.js'></script>
+        <script>
+          var wa_btnSetting = {"btnColor":"#16BE45","ctaText":"Whats up to Reserve","cornerRadius":40,"marginBottom":20,"marginLeft":20,"marginRight":20,"btnPosition":"right","whatsAppNumber":"911234567890","welcomeMessage":"Hello, I wish to make a reservation","zIndex":999999,"btnColorScheme":"light"};
+          window.onload = () => {
+            _waEmbed(wa_btnSetting);
+          };
+        </script>
+      
     <div id="wrapper">
         <a href="#" id="back-to-top"></a>
         
@@ -29,8 +37,8 @@
         <div id="de-loader"></div>
         <!-- page preloader close -->
 
-        <!-- header begin -->
-        <header class="transparent has-topbar scroll-blur">
+         <!-- header begin -->
+         <header class="transparent has-topbar scroll-blur">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
@@ -60,32 +68,32 @@
                                                                 <h4>Accomodation</h4>
                                                                 <ul class="no-bg">
                                                                     <li><a href="rooms.html">All Rooms</a></li>
-                                                                    <li><a href="rooms.html">Ajabu 4 Bedroom Cottage</a></li>
-                                                                    <li><a href="rooms-style-2.html">Kisima 3 Bedroom Cottage</a></li>
-                                                                    <li><a href="rooms-style-3.html">Kilulu 3 Bedroom Cottage</a></li>
-                                                                    <li><a href="room-single.html">Mwamba 2 Bedroom Cottage</a></li>
-                                                                    <li><a href="room-single-style-2.html">Tausi 2 Bedroom Cottage</a></li>
+                                                                    <li><a href="main-villa.html">Kivulini Villa</a></li>
+                                                                    <li><a href="kisima.html">Kisima 3 Bedroom Cottage</a></li>
+                                                                    <li><a href="kilulu.html">Kilulu 3 Bedroom Cottage</a></li>
+                                                                    <li><a href="mwamba.html">Mwamba 2 Bedroom Cottage</a></li>
+                                                                    <li><a href="tausi1.html">Tausi 2 Bedroom Cottage</a></li>
                                                                     <li><a href="room-single.html"> Kikapu 1 Bedroom Cottage</a></li>
-                                                                    <li><a href="room-single-style-2.html">Siagi 1 Bedroom Cottage</a></li>
+                                                                    <li><a href="ajabu.html">Ajabu 4 Bedroom Cottage</a></li>
                                                                 </ul>                     
                                                             </div>
                                                             <div class="col-lg-3 text-center">
                                                                 <div class="relative hover text-center overflow-hidden soft-shadow rounded-5px">
-                                                                    <a href="room-single.html">
+                                                                    <a href="main-villa.html">
                                                                         <div class="d-label">
                                                                             Best Seller
                                                                         </div>
-                                                                        <img src="images/cottages/Ajabu 1.jpg" class="w-100 relative hover-scale-1-1" alt="">
+                                                                        <img src="images/room-landscape/main villa.jpg" class="w-100 relative hover-scale-1-1" alt="">
                                                                     </a>
 
                                                                     <div class="abs w-100 h-100 start-0 top-0 hover-bg-color"></div>
                                                                 </div>                            
-                                                                <h5 class="mt-3 mb-1">Ajabu 4 Bedroom Cottage</h5>                          
+                                                                <h5 class="mt-3 mb-1">Kivulini 7 Bedroom Villa</h5>                          
                                                             </div>
 
                                                             <div class="col-lg-3 text-center">
                                                                 <div class="relative hover text-center overflow-hidden soft-shadow rounded-5px">
-                                                                    <a href="room-single.html">
+                                                                    <a href="mwamba.html">
                                                                         <div class="d-label">
                                                                             Best Seller
                                                                         </div>
@@ -99,7 +107,7 @@
 
                                                             <div class="col-lg-3 text-center">
                                                                 <div class="relative hover text-center overflow-hidden soft-shadow rounded-5px">
-                                                                    <a href="room-single.html">
+                                                                    <a href="kikapu.html">
                                                                         <div class="d-label">
                                                                             Featured
                                                                         </div>
