--- a/mwamba.html
+++ b/mwamba.html
@@ -22,6 +22,14 @@
 </head>
 
 <body>
+    <script async src='https://d2mpatx37cqexb.cloudfront.net/delightchat-whatsapp-widget/embeds/embed.min.js'></script>
+        <script>
+          var wa_btnSetting = {"btnColor":"#16BE45","ctaText":"Whats up to Reserve","cornerRadius":40,"marginBottom":20,"marginLeft":20,"marginRight":20,"btnPosition":"right","whatsAppNumber":"911234567890","welcomeMessage":"Hello, I wish to make a reservation for the Mwamba Cottage","zIndex":999999,"btnColorScheme":"light"};
+          window.onload = () => {
+            _waEmbed(wa_btnSetting);
+          };
+        </script>
+      
     <div id="wrapper">
         <a href="#" id="back-to-top"></a>
         
