--- a/tausi1.html
+++ b/tausi1.html
@@ -133,7 +133,7 @@
                                             <li><a href="gallery.html">Gallery</a></li>
                                         </ul>
                                     </li>
-                                    <li><a class="menu-item" href="news.html">News</a></li>
+                                    
                                     <li><a class="menu-item" href="contact.html">Contact</a></li>
                                 </ul>
                             </div>
@@ -155,14 +155,14 @@
             <div id="top"></div>
 
             <section id="subheader" class="relative jarallax text-light">
-                <img src="images/background/1.jpg" class="jarallax-img" alt="">
+                <img src="images/room-landscape/tausi 1b.jpg" class="jarallax-img" alt="">
                 <div class="container relative z-index-1000">
                     <div class="row justify-content-center">
                         <div class="col-lg-12 text-center">
-                            <h1>Kivulini Villa</h1>
+                            <h1>Tausi Cottage</h1>
                             <ul class="crumb">
                                 <li><a href="index.html">Home</a></li>
-                                <li class="active">Kivulini Villa</li>
+                                <li class="active">Tausi 1</li>
                             </ul>
                             <div class="spacer-double"></div>
                         </div>
@@ -204,7 +204,7 @@
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-lg-7 text-center">
-                            <h3 class="wow fadeInUp">A luxurious double-storey villa blending Swahili elegance with modern comfort. Features spacious en-suite bedrooms, a private swimming pool, and breathtaking ocean views—perfect for families or large groups seeking an exclusive beach escape.</h3>
+                            <h3 class="wow fadeInUp">A cozy two-bedroom retreat offering privacy and comfort, with charming interiors and a shaded outdoor sitting area to soak in the coastal serenity.</h3>
                         </div>
                     </div>
                 </div>
@@ -221,7 +221,7 @@
                             <!-- room begin -->
                             <div class="item">
                                 <div class="hover relative text-light">
-                                    <img src="images/cottages/Main villa 9.jpg" class="w-100" alt="">
+                                    <img src="images/cottages/tausi1b1.jpg" class="w-100" alt="">
                                 </div>
                             </div>
                             <!-- room end -->
@@ -229,7 +229,7 @@
                             <!-- room begin -->
                             <div class="item">
                                 <div class="hover relative text-light">
-                                    <img src="images/cottages/main villa 12.jpg" class="w-100" alt="">
+                                    <img src="images/cottages/tausi1b2.jpg" class="w-100" alt="">
                                 </div>
                             </div>
                             <!-- room end -->
@@ -237,7 +237,7 @@
                             <!-- room begin -->
                             <div class="item">
                                 <div class="hover relative text-light">
-                                    <img src="images/cottages/Main villa 2.jpg" class="w-100" alt="">
+                                    <img src="images/cottages/tausi1b3.jpg" class="w-100" alt="">
                                 </div>
                             </div>
                             <!-- room end -->
@@ -245,50 +245,37 @@
                             <!-- room begin -->
                             <div class="item">
                                 <div class="hover relative text-light">
-                                    <img src="images/cottages/main villa 4.jpg" class="w-100" alt="">
+                                    <img src="images/cottages/tausi1b4.jpg" class="w-100" alt="">
                                 </div>
                             </div>
                             <!-- room end -->
                                                          <!-- room begin -->
                             <div class="item">
                                 <div class="hover relative text-light">
-                                    <img src="images/cottages/main villa 6.jpg" class="w-100" alt="">
+                                    <img src="images/cottages/tausi1b5.jpg" class="w-100" alt="">
                                 </div>
                             </div>
                             <!-- room end -->
                                                                                       <!-- room begin -->
                             <div class="item">
                                 <div class="hover relative text-light">
-                                    <img src="images/cottages/main villa 7.jpg" class="w-100" alt="">
+                                    <img src="images/cottages/tausi1b6.jpg" class="w-100" alt="">
                                 </div>
                             </div>
                             <!-- room end -->
                                                                                       <!-- room begin -->
                             <div class="item">
                                 <div class="hover relative text-light">
-                                    <img src="images/cottages/main villa 8.jpg" class="w-100" alt="">
+                                    <img src="images/cottages/tausi1b7.jpg" class="w-100" alt="">
                                 </div>
                             </div>
                             <!-- room end -->
-                                                                                      <!-- room begin -->
-                            <div class="item">
-                                <div class="hover relative text-light">
-                                    <img src="images/cottages/main villa 10.jpg" class="w-100" alt="">
-                                </div>
-                            </div>
-                            <!-- room end -->
-                                                                                      <!-- room begin -->
-                            <div class="item">
-                                <div class="hover relative text-light">
-                                    <img src="images/cottages/main villa 5.jpg" class="w-100" alt="">
-                                </div>
-                            </div>
-                            <!-- room end -->
+
                                                          <!-- room begin (Video) -->
     <div class="item">
         <div class="hover relative text-light">
             <video class="w-100" autoplay muted loop>
-                <source src="/video/3.mp4" type="video/mp4">
+                <source src="/video/tausi1b.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
@@ -302,12 +289,7 @@
 
                 <div class="container">
                     <div class="row g-4 justify-content-center">
-                        <div class="col-lg-3 col-6 wow fadeInRight" data-wow-delay=".2s">
-                            <div class="d-block relative">
-                                <img src="images/icons/guests.png" class="w-40px" alt="">
-                                <p class="absolute abs-middle ml70 text-dark fw-500">10 Guests</p>
-                            </div>
-                        </div>
+                        
 
 
                         <div class="col-lg-3 col-6 wow fadeInRight" data-wow-delay=".2s">
@@ -320,7 +302,7 @@
                         <div class="col-lg-3 col-6 wow fadeInRight" data-wow-delay=".2s">
                             <div class="d-block relative">
                                 <img src="images/icons/bed.png" class="w-40px" alt="">
-                                <p class="absolute abs-middle ml70 text-dark fw-500">10 Beds</p>
+                                <p class="absolute abs-middle ml70 text-dark fw-500">5 Beds</p>
                             </div>
                         </div>
 
