--- a/mwamba.html
+++ b/mwamba.html
@@ -129,7 +129,7 @@
                                         <ul>
                                             <li><a href="about.html">About Us</a></li>
                                             <li><a href="facilities.html">Facilities</a></li>
-                                            <li><a href="special-offers.html">Offers</a></li>
+                                            <!-- <li><a href="special-offers.html">Offers</a></li> -->
                                             <li><a href="gallery.html">Gallery</a></li>
                                         </ul>
                                     </li>
