Added Offcial Instagram

--- a/about.html
+++ b/about.html
@@ -127,8 +127,10 @@
                                     <li><a class="menu-item" href="reservation.html">Reservation</a></li>
                                     <li><a class="menu-item" href="#">Pages</a>
                                         <ul>
-                                            <li><a href="about.html">About Us</a></li>
-                                            <li><a href="facilities.html">Facilities</a></li>
+
+                                            <!-- <li><a href="about.html">About Us</a></li>
+                                            <li><a href="facilities.html">Facilities</a></li> -->
+
                                             <!-- <li><a href="special-offers.html">Offers</a></li> -->
                                             <li><a href="gallery.html">Gallery</a></li>
                                         </ul>
@@ -155,7 +157,7 @@
             <div id="top"></div>
 
             <section id="subheader" class="relative jarallax text-light">
-                <img src="images/background/3.webp" class="jarallax-img" alt="">
+                <img src="images/cottages/kilulu1.jpg" class="jarallax-img" alt="">
                 <div class="container relative z-index-1000">
                     <div class="row justify-content-center">
                         <div class="col-lg-12 text-center">
@@ -176,18 +178,24 @@
                         <div class="col-lg-6">
                             <div class="subtitle wow fadeInUp mb-3">Welcome</div>
                             <h2 class="wow fadeInUp" data-wow-delay=".2s">History of Our Villas and Cottages</h2>
-                            <p>Est deserunt sed enim reprehenderit pariatur id reprehenderit in cupidatat in culpa sunt tempor pariatur nostrud minim irure culpa do magna. Nisi aute do ut elit esse dolor amet cupidatat amet voluptate laboris cillum mollit elit anim amet enim ut veniam anim ut nostrud. Esse et dolor nisi laboris aliquip et irure et ad ut voluptate adipisicing sint ut est deserunt irure do do id laborum pariatur ut enim labore labore occaecat dolore laboris quis veniam magna laborum nulla dolor officia aliqua sunt.</p>
+                            <p>Kivulini Beach Villas & Cottages is a hidden gem on the stunning shores of Diani Beach, Mombasa South Coast. Inspired by traditional Swahili and Arab coastal architecture, Kivulini was established to offer a serene and private beachfront retreat while preserving the rich cultural and natural beauty of the Kenyan coast.
+
+                                Originally built as a private family residence, the Main Villa, a magnificent 7-bedroom house, became the heart of the property. Over time, demand for exclusive, tranquil accommodations led to the expansion of the estate. Several cottages and studios were added, each designed to blend seamlessly with the tropical surroundings while offering modern comforts.
+                                
+                                Today, Kivulini Beach Villas & Cottages comprises a variety of accommodations, from the luxurious Ajabu 4-bedroom cottage to the intimate Tausi Studios, catering to families, groups, and solo travelers alike. Guests enjoy breathtaking ocean views, lush coconut groves, and direct beach access, making it a preferred destination for relaxation and adventure.
+                                
+                                With a commitment to personalized hospitality, Kivulini continues to offer a unique coastal experience, allowing guests to immerse themselves in the beauty, tranquility, and charm of Diani Beach..</p>
                         </div>
 
                         <div class="col-lg-6">
                             <div class="row g-4">
                                 <div class="col-6">
-                                    <img src="images/misc/7.webp" class="img-fluid mb-4 wow zoomIn" alt="">
+                                    <img src="images/cottages/tausi1b1.jpg" class="img-fluid mb-4 wow zoomIn" alt="">
                                     <div class="col-12 text-center">
                                         <div class="bg-color-2 text-light p-4">
                                             <div class="de_count wow fadeInUp">
-                                                <h2 class="mb-0"><span class="timer" data-to="120" data-speed="3000"></span>+</h2>
-                                                <span>Rooms Available</span>
+                                                <h2 class="mb-0"><span class="timer" data-to="11" data-speed="3000"></span></h2>
+                                                <span>Villas and Cottages available</span>
                                             </div>
                                         </div>
                                     </div>
@@ -197,12 +205,12 @@
                                     <div class="col-12 text-center">
                                         <div class="bg-color text-light p-4">
                                             <div class="de_count wow fadeInUp">
-                                                <h2 class="mb-0"><span class="timer" data-to="105" data-speed="3000"></span>%</h2>
-                                                <span>Menu Selection</span>
+                                                <h2 class="mb-0"><span class="timer" data-to="300" data-speed="3000"></span>+</h2>
+                                                <span>Happy Clients</span>
                                             </div>
                                         </div>
                                     </div>
-                                    <img src="images/misc/8.webp" class="img-fluid mt-4 wow zoomIn" alt="">
+                                    <img src="images/room-landscape/Clients.png" class="img-fluid mt-4 wow zoomIn" alt="">
                                 </div>
                             </div>
                         </div>
@@ -476,7 +484,7 @@
                                 <img src="images/Logo/KIVULINI_20250107_144704_0000.png" class="w-200px" alt=""><br>
                                 <div class="social-icons mb-sm-30 mt-4">
                                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                    <a href="https://www.instagram.com/kivulinivillas/"><i class="fa-brands fa-instagram"></i></a>
                                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
                                     <a href="#"><i class="fa-brands fa-youtube"></i></a>
                                 </div>
