--- a/index.html
+++ b/index.html
@@ -127,8 +127,10 @@
                                     <li><a class="menu-item" href="reservation.html">Reservation</a></li>
                                     <li><a class="menu-item" href="#">Pages</a>
                                         <ul>
-                                            <li><a href="about.html">About Us</a></li>
-                                            <li><a href="facilities.html">Facilities</a></li>
+
+                                            <!-- <li><a href="about.html">About Us</a></li>
+                                            <li><a href="facilities.html">Facilities</a></li> -->
+
                                             <!-- <li><a href="special-offers.html">Offers</a></li> -->
                                             <li><a href="gallery.html">Gallery</a></li>
                                         </ul>
@@ -432,7 +434,7 @@
                                 <img src="images/Logo/KIVULINI_20250107_144704_0000.png" class="w-200px" alt=""><br>
                                 <div class="social-icons mb-sm-30 mt-4">
                                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                    <a href="https://www.instagram.com/kivulinivillas/"><i class="fa-brands fa-instagram"></i></a>
                                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
                                     <a href="#"><i class="fa-brands fa-youtube"></i></a>
                                 </div>
