--- a/news-single.html
+++ b/news-single.html
@@ -371,7 +371,7 @@
                                 <img src="images/Logo/KIVULINI_20250107_144704_0000.png" class="w-200px" alt=""><br>
                                 <div class="social-icons mb-sm-30 mt-4">
                                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                    <a href="https://www.instagram.com/kivulinivillas/"><i class="fa-brands fa-instagram"></i></a>
                                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
                                     <a href="#"><i class="fa-brands fa-youtube"></i></a>
                                 </div>
