All rooms singles complete

--- a/rooms.html
+++ b/rooms.html
@@ -395,6 +395,27 @@
                             </div>
                         </div>
                         <!-- room end -->
+                                                 <!-- room begin -->
+                        <div class="col-lg-4 col-sm-6">
+                            <div class="bg-light hover relative text-center wow fadeInUp" data-wow-delay="1.1s">
+                                <div class="relative overflow-hidden">
+                                    <img src="images/room-landscape/kikapu 1b.jpg" class="img-fluid hover-scale-1-1" alt="">
+                                </div>
+                                <div class="p-3 mb-3 w-100 text-center">
+                                    <h3 class="mb-0">Siagi</h3>
+                                    <div class="text-center fs-14 mb-3">
+                                        <span class="mx-2">
+                                            1 Bedroom
+                                        </span>
+                                        <span class="mx-2">
+                                            $40 per person/night
+                                        </span>
+                                    </div>
+                                    <a class="btn-main w-100" href="siagi-1.html">Book Now</a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- room end -->
                     </div>
                 </div>
             </section>
