--- a/tausi3.html
+++ b/tausi3.html
@@ -161,10 +161,10 @@
                 <div class="container relative z-index-1000">
                     <div class="row justify-content-center">
                         <div class="col-lg-12 text-center">
-                            <h1>Kivulini Villa</h1>
+                            <h1>Tausi 3 Cottage</h1>
                             <ul class="crumb">
                                 <li><a href="index.html">Home</a></li>
-                                <li class="active">Kivulini Villa</li>
+                                <li class="active">Tausi 3</li>
                             </ul>
                             <div class="spacer-double"></div>
                         </div>
@@ -206,7 +206,7 @@
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-lg-7 text-center">
-                            <h3 class="wow fadeInUp">A luxurious double-storey villa blending Swahili elegance with modern comfort. Features spacious en-suite bedrooms, a private swimming pool, and breathtaking ocean views—perfect for families or large groups seeking an exclusive beach escape.</h3>
+                            <h3 class="wow fadeInUp">A peaceful and compact beachside studio, designed for simplicity and comfort, perfect for a short yet memorable stay.</h3>
                         </div>
                     </div>
                 </div>
@@ -223,7 +223,7 @@
                             <!-- room begin -->
                             <div class="item">
                                 <div class="hover relative text-light">
-                                    <img src="images/cottages/Main villa 9.jpg" class="w-100" alt="">
+                                    <img src="images/cottages/tausistudio31.jpg" class="w-100" alt="">
                                 </div>
                             </div>
                             <!-- room end -->
@@ -231,7 +231,7 @@
                             <!-- room begin -->
                             <div class="item">
                                 <div class="hover relative text-light">
-                                    <img src="images/cottages/main villa 12.jpg" class="w-100" alt="">
+                                    <img src="images/cottages/tausistudio32.jpg" class="w-100" alt="">
                                 </div>
                             </div>
                             <!-- room end -->
@@ -239,7 +239,7 @@
                             <!-- room begin -->
                             <div class="item">
                                 <div class="hover relative text-light">
-                                    <img src="images/cottages/Main villa 2.jpg" class="w-100" alt="">
+                                    <img src="images/cottages/tausistudio33.jpg" class="w-100" alt="">
                                 </div>
                             </div>
                             <!-- room end -->
@@ -247,42 +247,14 @@
                             <!-- room begin -->
                             <div class="item">
                                 <div class="hover relative text-light">
-                                    <img src="images/cottages/main villa 4.jpg" class="w-100" alt="">
+                                    <img src="images/cottages/tausistudio34.jpg" class="w-100" alt="">
                                 </div>
                             </div>
                             <!-- room end -->
                                                          <!-- room begin -->
                             <div class="item">
                                 <div class="hover relative text-light">
-                                    <img src="images/cottages/main villa 6.jpg" class="w-100" alt="">
-                                </div>
-                            </div>
-                            <!-- room end -->
-                                                                                      <!-- room begin -->
-                            <div class="item">
-                                <div class="hover relative text-light">
-                                    <img src="images/cottages/main villa 7.jpg" class="w-100" alt="">
-                                </div>
-                            </div>
-                            <!-- room end -->
-                                                                                      <!-- room begin -->
-                            <div class="item">
-                                <div class="hover relative text-light">
-                                    <img src="images/cottages/main villa 8.jpg" class="w-100" alt="">
-                                </div>
-                            </div>
-                            <!-- room end -->
-                                                                                      <!-- room begin -->
-                            <div class="item">
-                                <div class="hover relative text-light">
-                                    <img src="images/cottages/main villa 10.jpg" class="w-100" alt="">
-                                </div>
-                            </div>
-                            <!-- room end -->
-                                                                                      <!-- room begin -->
-                            <div class="item">
-                                <div class="hover relative text-light">
-                                    <img src="images/cottages/main villa 5.jpg" class="w-100" alt="">
+                                    <img src="images/cottages/tausistudio35.jpg" class="w-100" alt="">
                                 </div>
                             </div>
                             <!-- room end -->
@@ -290,7 +262,7 @@
     <div class="item">
         <div class="hover relative text-light">
             <video class="w-100" autoplay muted loop>
-                <source src="/video/3.mp4" type="video/mp4">
+                <source src="/video/tausistudio3.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
