--- a/sweetbreeze.html
+++ b/sweetbreeze.html
@@ -161,10 +161,10 @@
                 <div class="container relative z-index-1000">
                     <div class="row justify-content-center">
                         <div class="col-lg-12 text-center">
-                            <h1>Kivulini Villa</h1>
+                            <h1>SweetBreeze Cottage</h1>
                             <ul class="crumb">
                                 <li><a href="index.html">Home</a></li>
-                                <li class="active">Kivulini Villa</li>
+                                <li class="active">Sweet Breeze</li>
                             </ul>
                             <div class="spacer-double"></div>
                         </div>
@@ -206,7 +206,7 @@
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-lg-7 text-center">
-                            <h3 class="wow fadeInUp">A luxurious double-storey villa blending Swahili elegance with modern comfort. Features spacious en-suite bedrooms, a private swimming pool, and breathtaking ocean views—perfect for families or large groups seeking an exclusive beach escape.</h3>
+                            <h3 class="wow fadeInUp">A stylish, sunlit studio with a breezy atmosphere, offering a cozy space for a relaxed beach getaway.</h3>
                         </div>
                     </div>
                 </div>
@@ -223,7 +223,7 @@
                             <!-- room begin -->
                             <div class="item">
                                 <div class="hover relative text-light">
-                                    <img src="images/cottages/Main villa 9.jpg" class="w-100" alt="">
+                                    <img src="images/cottages/sweetbreeze1.jpg" class="w-100" alt="">
                                 </div>
                             </div>
                             <!-- room end -->
@@ -231,7 +231,7 @@
                             <!-- room begin -->
                             <div class="item">
                                 <div class="hover relative text-light">
-                                    <img src="images/cottages/main villa 12.jpg" class="w-100" alt="">
+                                    <img src="images/cottages/sweetbreeze2.jpg" class="w-100" alt="">
                                 </div>
                             </div>
                             <!-- room end -->
@@ -239,7 +239,7 @@
                             <!-- room begin -->
                             <div class="item">
                                 <div class="hover relative text-light">
-                                    <img src="images/cottages/Main villa 2.jpg" class="w-100" alt="">
+                                    <img src="images/cottages/sweetbreeze3.jpg" class="w-100" alt="">
                                 </div>
                             </div>
                             <!-- room end -->
@@ -247,50 +247,37 @@
                             <!-- room begin -->
                             <div class="item">
                                 <div class="hover relative text-light">
-                                    <img src="images/cottages/main villa 4.jpg" class="w-100" alt="">
+                                    <img src="images/cottages/sweetbreeze4.jpg" class="w-100" alt="">
                                 </div>
                             </div>
                             <!-- room end -->
                                                          <!-- room begin -->
                             <div class="item">
                                 <div class="hover relative text-light">
-                                    <img src="images/cottages/main villa 6.jpg" class="w-100" alt="">
+                                    <img src="images/cottages/sweetbreeze5.jpg" class="w-100" alt="">
                                 </div>
                             </div>
                             <!-- room end -->
                                                                                       <!-- room begin -->
                             <div class="item">
                                 <div class="hover relative text-light">
-                                    <img src="images/cottages/main villa 7.jpg" class="w-100" alt="">
+                                    <img src="images/cottages/sweetbreeze6.jpg" class="w-100" alt="">
                                 </div>
                             </div>
                             <!-- room end -->
                                                                                       <!-- room begin -->
                             <div class="item">
                                 <div class="hover relative text-light">
-                                    <img src="images/cottages/main villa 8.jpg" class="w-100" alt="">
+                                    <img src="images/cottages/sweetbreeze7.jpg" class="w-100" alt="">
                                 </div>
                             </div>
                             <!-- room end -->
-                                                                                      <!-- room begin -->
-                            <div class="item">
-                                <div class="hover relative text-light">
-                                    <img src="images/cottages/main villa 10.jpg" class="w-100" alt="">
-                                </div>
-                            </div>
-                            <!-- room end -->
-                                                                                      <!-- room begin -->
-                            <div class="item">
-                                <div class="hover relative text-light">
-                                    <img src="images/cottages/main villa 5.jpg" class="w-100" alt="">
-                                </div>
-                            </div>
-                            <!-- room end -->
+
                                                          <!-- room begin (Video) -->
     <div class="item">
         <div class="hover relative text-light">
             <video class="w-100" autoplay muted loop>
-                <source src="/video/3.mp4" type="video/mp4">
+                <source src="/video/sweetbreeze.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
@@ -307,7 +294,7 @@
                         <div class="col-lg-3 col-6 wow fadeInRight" data-wow-delay=".2s">
                             <div class="d-block relative">
                                 <img src="images/icons/guests.png" class="w-40px" alt="">
-                                <p class="absolute abs-middle ml70 text-dark fw-500">10 Guests</p>
+                                <p class="absolute abs-middle ml70 text-dark fw-500">2 Guests</p>
                             </div>
                         </div>
 
@@ -322,7 +309,7 @@
                         <div class="col-lg-3 col-6 wow fadeInRight" data-wow-delay=".2s">
                             <div class="d-block relative">
                                 <img src="images/icons/bed.png" class="w-40px" alt="">
-                                <p class="absolute abs-middle ml70 text-dark fw-500">10 Beds</p>
+                                <p class="absolute abs-middle ml70 text-dark fw-500">1 Beds</p>
                             </div>
                         </div>
 
