--- a/rooms.html
+++ b/rooms.html
@@ -399,7 +399,7 @@
                         <div class="col-lg-4 col-sm-6">
                             <div class="bg-light hover relative text-center wow fadeInUp" data-wow-delay="1.1s">
                                 <div class="relative overflow-hidden">
-                                    <img src="images/room-landscape/kikapu 1b.jpg" class="img-fluid hover-scale-1-1" alt="">
+                                    <img src="images/cottages/siagi1.jpg" class="img-fluid hover-scale-1-1" alt="">
                                 </div>
                                 <div class="p-3 mb-3 w-100 text-center">
                                     <h3 class="mb-0">Siagi</h3>
