--- a/reservation.html
+++ b/reservation.html
@@ -235,23 +235,36 @@
                                         <h4>Select Room</h4>
 
                                         <select name="Room Type" class="room-type form-control">
-                                          <option value='Standart Room' data-src="images/form/1.jpg">
-                                            Standart Room | $119/night | 2 Guests
+                                          <option value='Kivulini Villa' data-src="images/form/1.jpg">
+                                            Kivulini Villa | $40/night/per person |
                                           </option>
-                                          <option value='Deluxe Room' data-src="images/form/2.jpg">
-                                            Deluxe Room | $129/night | 2 Guests
+                                          <option value='Ajabu Cottage' data-src="images/form/2.jpg">
+                                            Ajabu Cottage | $40/night/person | 
                                           </option>
-                                          <option value='Premier Room' data-src="images/form/3.jpg">
-                                            Premier Room | $139/night | 2 Guests
+                                          <option value='Kisima Cottage' data-src="images/form/3.jpg">
+                                            Kisima Cottage | $40/night/person | 
                                           </option>
-                                          <option value='Family Suite' data-src="images/form/4.jpg">
-                                            Family Suite | $149/night | 4 Guests
+                                          <option value='Kilulu Cottage' data-src="images/form/4.jpg">
+                                            Kilulu Cottage | $40/night/person| 
                                           </option>
-                                          <option value='Luxury Suite' data-src="images/form/5.jpg">
-                                            Luxury Suite | $179/night | 2 Guests
+                                          <option value='Tausi 1 Cottage' data-src="images/form/5.jpg">
+                                            Tausi 1 Bedroom | $40/night/person | 
                                           </option>
-                                          <option value='Presidential Suite' data-src="images/form/6.jpg">
-                                            Presidential Suite | $199/night | 2 Guests
+                                          <option value='Tausi 2 Studio' data-src="images/form/6.jpg">
+                                            Tausi 2 Studio | $40/night/person | 
+                                          <option value='Tausi 3 Studio' data-src="images/form/6.jpg">
+                                            Tausi 3 Studio | $40/night/person | 
+                                          </option>
+                                          <option value='SweetBreeze Studio' data-src="images/form/6.jpg">
+                                            SweetBreeze Studio | $40/night/person | 
+                                          <option value='Mwamba Cottage' data-src="images/form/6.jpg">
+                                            Mwamba Cottage | $40/night/person | 
+                                          </option>
+                                          <option value='Kikapu Cottage' data-src="images/form/6.jpg">
+                                            Kikapu Cottage | $40/night/person | 
+                                          </option>
+                                          <option value='Siagi Cottage' data-src="images/form/6.jpg">
+                                            Siagi Cottage | $40/night/person |  
                                           </option>
                                         </select>
                                     </div>
